# ghru-voice-assistant

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_web.py  voice assistant 1.py
screenshots/: desktop.ini
voice_assistant/: .gitignore  __init__.py  assistant.py  data.py  main.py  webapp.py
voice_assistant/__pycache__/: assistant.cpython-312.pyc.2063574664368  webapp.cpython-312.pyc.2474180542512
voice_assistant/static/: app.js  styles.css
voice_assistant/templates/: index.html
