[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ghrus-voice-assistant"
version = "1.0.0"
description = "A Python voice assistant for G H Raisoni University Saikheda."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "SpeechRecognition==3.14.3",
    "pyttsx3==2.99",
    "PyAudio==0.2.14",
    "edge-tts==7.2.7",
    "pygame==2.6.1",
    "piper-tts==1.4.1",
    "Flask==3.1.0",
]

[tool.setuptools.packages.find]
include = ["voice_assistant*"]
